# mantis

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
mantis/: CMakeLists.txt
mantis/include/: test.hpp
mantis/src/: test.cpp
